# gitops

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
.github/: pull_request_template.md
auto_nav/: CMakeLists.txt  README.md  autonav.ipynb  package.xml  screenlog.0
auto_nav/src/cpp/exp/: CMakeCache.txt  CMakeLists.txt  Makefile  MyEigenApp  Sophus_example.cpp  cmake_install.cmake  dist_To_line.cpp  distance_to_line.cpp  left_point.cpp  line.cpp  lsm.cpp  matix.cpp  pair.cpp
autopilot/: CMakeLists.txt  README.md  package.xml
autopilot/boson_console_ui/: README.md  app.py  txt_to_json.py
autopilot/cfg/: pid_config.cfg
autopilot/launch/: autopilot.launch  failsafe_manager.launch  minimal_bag_recorder.launch  path_publisher.launch  patrol.launch  patrol_new.launch  patrol_obs_stopper.launch  save_path.launch  zed_object_detection.launch
autopilot/mission_files/: 115_meters.kml  17-feb-test1.json  2-24-test1.json  2-24-test2.json  22-feb-test1.json  22-feb-test2.json  23-feb-test2.json  23-feb-test3.json  23_07_22_5_51pm.json  23_07_22_6_07AN.json  30_07_2022_18_58_49.json  75meters.json  almond56m.json  carla2.json  carla3.json  carla5.json  default.json  default1.json  farmHC25072022.json  farmHC25072022_1.json  geofence.kml  gowtham2___1675317169191.json  gowtham3___1675317250973.json  gowtham4___1675317346182.json  gps12.json  hcfarm22072022.json  map.geojson  office.json  path170___1702704932458.json  reverse_poc.json  test1.json  test@11:30___1691647265842.json  test_final.kml  two.json  zekrome1.json  zekrome2.json
autopilot/nodes/: failsafe_manager.py  find_direction_change.py  halt_place.py  path_publisher.py  path_publisher_with_velocity_profiler.py  path_tracking_pure_pursuit.py  path_tracking_pure_pursuit_collision.py  path_tracking_pure_pursuit_pid.py  path_tracking_pure_pursuit_refactor.py  record_waypoints_json.py  record_waypoints_json_v2.py  waypoint_operations.py  zed_object_detect.py
autopilot/params/: patrol_params.yaml
autopilot/rviz/: carla-patrol.rviz  carla-patrol_obstacle_stop_planner.rviz  path.rviz  patrol.rviz  patrol_obstacle_stop_planner.rviz  zed_obs.rviz
autopilot/scripts/: carla_control_converter.py  circle_pure_pursuit.py  compass_imu_campare.py  curvature_vis.py  gps_fail_safe.py  markers_visualization.py  odom_path_plotter.py  zed_object_detect.py
autopilot_boson/: README.md  package.xml
autopilot_msgs/: CMakeLists.txt  package.xml
autopilot_msgs/msg/: ControllerDiagnose.msg  NavSatFixList.msg  Trajectory.msg  TrajectoryPoint.msg
autopilot_msgs/srv/: speedwaypoint.srv
autopilot_utils/: CMakeLists.txt  package.xml  setup.py
autopilot_utils/include/autopilot_utils/: autonav_utils.h  costmap_manager.h  dubins.h  dwa_path_ganerator.h  footprint_transform.h  pose_utils.h  tf_utils.h  trajectory_common.h
autopilot_utils/scripts/: test_import.py  test_import1.py
autopilot_utils/scripts/occupency_grid/: click_occ_grid.py  simple_test.py  test.py
autopilot_utils/src/: autonav_utils.cpp  costmap_manager.cpp  dubins.cpp  dwa_path_ganerator.cpp  footprint_transform.cpp  pose_utils.cpp  tf_utils.cpp  trajectory_common.cpp
autopilot_utils/src/autopilot_utils/: coordinate_helper.py  footprint_transform.py  motion_utils.py  occ_grid_helper.py  pose_helper.py  rdp_helper.py  tf_helper.py  topics_status.py  trajectory_common.py  trajectory_helper.py  trajectory_smoother.py
autopilot_utils/src/autopilot_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
boson_console_ui/: boson_map.html
collision_check/: CMakeLists.txt  package.xml
collision_monitor/: CMakeLists.txt  package.xml
costmap_generator/: CMakeLists.txt  package.xml
gps_path_utils/: CMakeLists.txt  README.md  Untitled.ipynb  package.xml
launch/: patrol.launch  save_path.launch
lidar_obstacle_detector/: CMakeLists.txt  README.md
mission_files/: 22-test3.json  4-feb-test1.json  4-feb-test2.json  4-feb-test3_up.json  5-feb-test1.json  carla3.json  from_office_to_groound.json  test1.json  test2.json  test_raman.json
nodes/: control_mode_selector.py  gps_odom_path_json.py  gps_path_from_json.py  path_publisher.py  path_tracking_pure_pursuit.py  path_tracking_stanley.py  pose_from_gps_json.py  pure_pursuit_odom.py  pure_pursuit_sim.py  record_waypoints_json.py  stanley_controller.py  waypoints_helper.py
obstacle_stop_planner/: CMakeLists.txt  README.md  package.xml
params/: patrol_params.yaml  pure_pursuit_params.yaml  stanly_params.yaml
pointcloud_to_laserscan_launcher/: CMakeLists.txt  package.xml
rviz/: carla_basic.rviz  path.rviz
scripts/: carla_control_converter.py  curvature.py  gps_fail_safe.py  map_to_baselink_tf_broadcast.py  markers_visualization.py  odom_2_tf_broadcast.py  odom_path_plotter.py
vehicle_common/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
vehicle_common/include/vehicle_common/: config_vehicle.h
vehicle_common/launch/: vehicle_description.launch
vehicle_common/params/: half_cabin_config.yaml  porter_config.yaml  vehicle_config.yaml
vehicle_common/scripts/: anello_gps_transform_node.py  anello_gps_transform_node.py.bk  fixposition.py  mavros_map_to_base.py  polynav_gps_transform_node.py  standalone_gps_transform_node.py  test_import.py
vehicle_common/src/: config_vehicle.cpp
vehicle_common/src/tf_helper/: tf_helper.py
vehicle_common/src/vehicle_common/: vehicle_config.py
vehicle_common/src/vehicle_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vehicle_common/urdf/: vehicle_description.xacro
vehicle_common/urdf/include/: meterials.urdf.xacro
vehicle_safety/: CMakeLists.txt  (+2 more)
vehicle_safety_cpp/: CMakeLists.txt  package.xml
vehicle_safety_cpp/include/: DouglasPeucker.h  Utils.h
vehicle_safety_cpp/launch/: vehicle_safety_cpp.launch
vehicle_safety_cpp/msg/: val.msg
vehicle_safety_cpp/params/: vehicle_safety_cpp_params.yaml
vehicle_safety_cpp/src/: DouglasPeucker.cpp  curve_detector_cpp.cpp  geo_fence_publisher.py  kml_geofence.py  talker.py  vehicle_safety_analyzer_cpp.cpp  vehicle_safety_cpp.cpp
vehicle_safety_cpp/srv/: trigger.srv
(+297 files in other folders)
