# cmake_minimum_required(VERSION 3.10)
# project(MyEigenProject)

# # Specify the C++ standard
# set(CMAKE_CXX_STANDARD 11)

# # Add your C++ executable and link against Eigen
# add_executable(MyEigenApp Sophus_example.cpp)

# # Include the path to the Eigen headers
# target_include_directories(MyEigenApp PRIVATE /usr/include/eigen3 )

# include(FetchContent)

# # set(SOPHUS_USE_BASIC_LOGGING ON CACHE BOOL "Don't use fmt for Sophus libraru")
# # set(BUILD_SOPHUS_TESTS OFF CACHE BOOL "Don't build Sophus tests")
# # set(BUILD_SOPHUS_EXAMPLES OFF CACHE BOOL "Don't build Sophus Examples")
